syntax = "proto2";

package arf_proto;

message FloatVector3 {
  required float x = 1;
  required float y = 2;
  required float z = 3;
}
